infra/securitygroup.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: >
    This template contains the Security Groups. 
    Author: Philippe Traon <ptraon@pm.me>
Parameters:
  VPC:
    Description: VPC 
    Type: "AWS::EC2::VPC::Id"
  ServerEnv:
    Description: "Server Environment name."
    Type: "String"  
  MyIP:
    Description: "My own IP."
    Type: "String" 

Resources:

  ###### SECURITY GROUPS ############

  ###### DOCUMENTATION ######
  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
  # https://docs.aws.amazon.com/vpc/latest/userguide/VPC_SecurityGroups.html
  # https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Security.html#VPC_Security_Comparison
  # https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ec2-security-groups.html
  ###########################

  EC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable HTTP, HTTPS, ICMP and SSH
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: !Ref MyIP  
      Tags:
        - Key: Name
          Value: EC2SG

  RDSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC 
      GroupDescription: Enable 3306
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          SourceSecurityGroupId: !Ref EC2SG
      Tags:
        - Key: Name
          Value: RDSSG

  ######################################################################
  # 1 Seul groupe de sécurité pour la partie VPN ?
  ######################################################################      


Outputs:

  EC2SG: 
    Description: "A reference to the security group for EC2"
    Value: !Ref "EC2SG"

  RDSSG:
    Description: "A reference to the security group for RDS"
    Value: !Ref "RDSSG"
    Export:
      Name: !Sub "${ServerEnv}-RDSSG"
